# iris

./: .gitignore  Cargo.toml  HUMAN-CONVERSATIONS.md  README.md  debug_bc.py  flake.nix  test_rec1.iris  test_rec_fact.iris
.claude/: CLAUDE.md
.claude/hooks/: log-conversation.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
.iris-daemon/: audit_trail.json  daemon_state.json
benches/: evaluator.rs
benchmark/: README.md  run_all.sh
benchmark/binary-trees/: binary-trees.iris  binary-trees.py  run.sh
benchmark/fannkuch-redux/: fannkuch-redux.iris  fannkuch-redux.py  run.sh
benchmark/fasta/: fasta.iris  fasta.py  run.sh
benchmark/k-nucleotide/: k-nucleotide.iris  k-nucleotide.py  run.sh
benchmark/n-body/: n-body.iris  n-body.py  run.sh
benchmark/pidigits/: pidigits.iris  pidigits.py  run.sh
benchmark/regex-redux/: regex-redux.iris  regex-redux.py  run.sh
benchmark/reverse-complement/: reverse-complement.iris  reverse-complement.py  run.sh
benchmark/spectral-norm/: run.sh  spectral-norm.iris  spectral-norm.py
benchmark/thread-ring/: run.sh  thread-ring.iris  thread-ring.py
bootstrap/: bootstrap.sh  build-native  build-native-self  build_self_compiled.sh  c_backend.json  compile_with_imports.json  compiler.json  interpreter.json  iris  iris-build  iris-native  iris-native-new  iris-stage0  iris_eval.json  iris_run.json  lowerer.json  mini_eval.json  parser.json  rebuild-json.sh  self_interpreter.json  stage0-manifest.json  tokenizer.json
bootstrap/c-runtime/: .gitignore  Makefile  iris-stage0-self  iris_effects.c  iris_eval.c  iris_eval.h  iris_graph.c  iris_graph.h  iris_interp_compiled.c  iris_interp_self_compiled.c  iris_json.c  iris_json.h  iris_json_write.c  iris_main.c  iris_prims.c  iris_rt.c  iris_rt.h  main.c
docs/: CONTRIBUTING.md  FIXME.md  TODO-2026-03-23.md  TODO-ecosystem.md  TODO.md  api-reference.md  architecture.md  capability-wiring-todo.md  contributing.md  council-report.md  formal-verification-overview.md  kernel-verification.md  language-reference.md  package-manifest-spec.md  security-todo.md  spec-to-impl-roadmap.md  tutorial-self-improving-service.md  typeclass-design.md  user-guide.md
examples/algebraic-types/: linked-list.iris  option.iris  result.iris  state-machine.iris
examples/algorithms/: a_star.iris  collatz.iris  dijkstra.iris  factorial.iris  fibonacci.iris  gcd.iris  kmp.iris  power.iris  sudoku_solver.iris  sum_to.iris  union_find.iris
examples/calculator/: README.md  calculator-test.iris  calculator.iris
examples/chat-protocol/: README.md  chat-test.iris  chat.iris
examples/classic-programs/: base_converter.iris  brainfuck.iris  fizzbuzz.iris  hello_world.iris  luhn.iris  roman_numerals.iris  temperature_converter.iris  tower_of_hanoi.iris
examples/compression/: huffman.iris
examples/concurrency/: dining_philosophers.iris  map_reduce.iris  pipeline.iris
examples/crypto/: hash.iris
examples/data-structures/: binary_search_tree.iris  priority_queue.iris  queue.iris  stack.iris  trie.iris
examples/database/: relational.iris
examples/design-patterns/: visitor.iris
examples/echo-server/: README.md  echo-server.iris  echo-test.iris
examples/ffi/: libc.iris  libm.iris
examples/fibonacci-server/: README.md  fib-server.iris  fib-test.iris
examples/file-processor/: README.md  file-processor-test.iris  file-processor.iris
examples/functional-patterns/: church_encoding.iris  composition.iris  currying.iris  lazy_streams.iris  monad_transformers.iris  state_monad.iris  y_combinator.iris
examples/games-puzzles/: game_of_life.iris  maze_solver.iris  n_queens.iris  tic_tac_toe.iris
examples/genetic-algorithm/: README.md  ga-test.iris  ga.iris
examples/io/: cat.iris  (+5 more)
iris-clcu/: Makefile
lean/: IrisKernel.lean  IrisKernelServer.lean  README.md  build_ffi.sh  lake-manifest.json  lakefile.lean
programs/: test_import.iris
site/: hugo.yaml
src/: lib.rs
src/iris-bootstrap/: Cargo.toml  build.rs  lean_shim.c
src/iris-bootstrap/src/: fragment_cache.rs  jit.rs  lib.rs  mini_eval.rs  native_compile.rs
src/iris-bootstrap/src/syntax/: ast.rs  diagnostic.rs  error.rs  formatter.rs  lexer.rs  lower.rs  mod.rs  parser.rs  prim.rs  token.rs
src/iris-bootstrap/src/syntax/kernel/: checker.rs  cost_checker.rs  error.rs  kernel.rs  lean_bridge.rs  lia_solver.rs  mod.rs  property_test.rs  theorem.rs  zk.rs
src/iris-evolve/: Cargo.toml
src/iris-evolve/src/: analyzer.rs  attention.rs  auto_improve.rs  checkpoint.rs  coevolution.rs  component_bridge.rs  config.rs  corpus.rs  crossover.rs  death.rs  ecosystem.rs  enumerate.rs  evolve_seeds.rs  improvement_tracker.rs  individual.rs  instrumentation.rs  iris_runtime.rs  lexicase.rs  lib.rs  map_elites.rs  meta_evolver.rs  migration.rs  mutation.rs  novelty.rs  nsga2.rs  performance_gate.rs  phase.rs  population.rs  resource.rs  result.rs  seed.rs  self_improve.rs  self_improving_daemon.rs  stigmergy.rs  verify.rs
src/iris-exec/: Cargo.toml
src/iris-exec/src/: backend.rs  cache.rs  capabilities.rs  clcu_backend.rs  effect_runtime.rs  improve.rs  interpreter.rs  jit_backend.rs  lib.rs  message_bus.rs  registry.rs  service.rs  stats.rs
tests/: bench_algorithms.rs  bench_cs.rs  bench_jit_comparison.rs  bench_math.rs  bench_micro.rs  bench_profiling.rs  evolve_abs.rs  evolve_dot_product.rs  evolve_dot_product_v2.rs  evolve_double.rs  evolve_max.rs  evolve_sum.rs  fuzz_interpreter.rs  integration_iris_replaces_rust.rs  iris_full_production.rs  iris_in_production.rs  live_daemon_test.rs  print_audit_example.rs  prove_algorithms.rs  prove_algorithms_v2.rs  prove_algorithms_v3.rs  prove_algorithms_v4.rs  prove_algorithms_v5.rs  prove_algorithms_v6.rs  prove_algorithms_v7.rs  self_write_checker.rs  self_write_codec.rs  self_write_compiler.rs  self_write_crossover_death.rs  self_write_eval_phase.rs  self_write_evolve.rs  self_write_fitness.rs  self_write_interpreter.rs  self_write_interpreter_v2.rs  self_write_mutation.rs  self_write_mutation_v2.rs  self_write_mutation_v3.rs  self_write_mutation_v4.rs  self_write_nsga.rs  self_write_nsga_v2.rs  (+80 more)
(+431 files in other folders)
