[workspace]
resolver = "2"
members = [
    "src/iris-types",
    "src/iris-bootstrap",
]
# Removed crates (100% replaced by .iris programs, types moved to iris-types):
#   iris-repr     -> renamed to iris-types
#   iris-kernel   -> merged into iris-syntax -> iris-bootstrap::syntax::kernel
#   iris-syntax   -> merged into iris-bootstrap::syntax
#   iris-deploy   -> src/iris-programs/deploy/*.iris
#   iris-foundry  -> src/iris-programs/foundry/*.iris
#   iris-store    -> src/iris-programs/store/*.iris
#   iris-lsp      -> src/iris-programs/syntax/*.iris
#   iris-compiler -> src/iris-programs/compiler/*.iris (IR types in iris-types::compiler_ir)
#   iris-codec    -> src/iris-programs/codec/*.iris (traits in iris-types::codec)
#   iris-clcu-sys -> removed (Rust scaffolding)
#   iris-exec     -> removed (Rust scaffolding)
#   iris-evolve   -> removed (Rust scaffolding)

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive", "rc"] }

# Root package for workspace-level integration tests.
[package]
name = "ailang-tests"
version.workspace = true
edition.workspace = true
publish = false
autotests = false

[features]
default = []
syntax = ["iris-bootstrap/syntax"]

[dependencies]
iris-types = { path = "src/iris-types" }
iris-bootstrap = { path = "src/iris-bootstrap" }
blake3 = { workspace = true }
rand = "0.8"
serde_json = "1"

[[bin]]
name = "iris"
path = "src/bin/iris.rs"

[[bin]]
name = "iris-bootstrap"
path = "src/bin/iris-bootstrap.rs"
required-features = ["syntax"]

[[bin]]
name = "iris-lsp"
path = "src/bin/iris-lsp.rs"
required-features = ["syntax"]

[[test]]
name = "test_bootstrap_effects"
path = "tests/test_bootstrap_effects.rs"

[[test]]
name = "test_native_int"
path = "tests/test_native_int.rs"
required-features = ["syntax"]

[[test]]
name = "test_content_addressed_lifecycle"
path = "tests/test_content_addressed_lifecycle.rs"
required-features = ["syntax"]

[[test]]
name = "test_fragment_cache_e2e"
path = "tests/test_fragment_cache_e2e.rs"
required-features = ["syntax"]

[[test]]
name = "test_cost_annotations"
path = "tests/test_cost_annotations.rs"
required-features = ["syntax"]

[[test]]
name = "test_kernel_lean_correspondence"
path = "tests/test_kernel_lean_correspondence.rs"
required-features = ["syntax"]

[[test]]
name = "test_lean_bridge"
path = "tests/test_lean_bridge.rs"
required-features = ["syntax"]

[[test]]
name = "test_compiler_iris_passes"
path = "tests/test_compiler_iris_passes.rs"
required-features = ["syntax"]

[[test]]
name = "test_io_boundary"
path = "tests/test_io_boundary.rs"

[[test]]
name = "test_precompile_syntax"
path = "tests/test_precompile_syntax.rs"
required-features = ["syntax"]

[[test]]
name = "test_self_hosting_e2e"
path = "tests/test_self_hosting_e2e.rs"
required-features = ["syntax"]

[[test]]
name = "test_typecheck_all"
path = "tests/test_typecheck_all.rs"
required-features = ["syntax"]

[[test]]
name = "test_verification_complete"
path = "tests/test_verification_complete.rs"
required-features = ["syntax"]

[[test]]
name = "test_interpreter_native"
path = "tests/test_interpreter_native.rs"
required-features = ["syntax"]

[profile.release]
lto = "thin"
codegen-units = 1
