[package]
name = "iris-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
lean-ffi = []
syntax = []

[dependencies]
iris-types = { path = "../iris-types" }
blake3.workspace = true
serde = { workspace = true }
serde_json = "1"

[build-dependencies]
cc = "1"
