[package]
name = "iris-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["lean-kernel"]
lean-kernel = []
lean-ffi = ["lean-kernel"]
syntax = []

[dependencies]
iris-types = { path = "../iris-types" }
blake3.workspace = true
serde = { workspace = true }
serde_json = "1"

[build-dependencies]
cc = "1"
