[package]
name = "iris-evolve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iris-types = { path = "../iris-types" }
iris-exec = { path = "../iris-exec" }
iris-bootstrap = { path = "../iris-bootstrap", features = ["syntax"] }
blake3.workspace = true
serde.workspace = true
serde_json = "1"
rand = "0.8"
